manifests/dev/lidarr/Deployment-lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/version: latest
  name: lidarr
  namespace: lidarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: lidarr
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: lidarr
        app.kubernetes.io/name: lidarr
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: VPN_SERVICE_PROVIDER
              value: mullvad
            - name: VPN_TYPE
              value: openvpn
            - name: MULLVAD_ACCOUNT_NUMBER
              valueFrom:
                secretKeyRef:
                  key: accountNumber
                  name: lidarr-mullvad-account
            - name: OPENVPN_USER
              valueFrom:
                secretKeyRef:
                  key: accountNumber
                  name: lidarr-mullvad-account
            - name: SERVER_COUNTRIES
              value: United States
            - name: SERVER_CITIES
              value: Chicago
            - name: FIREWALL_VPN_INPUT_PORTS
              value: "8686"
            - name: FIREWALL
              value: "on"
            - name: FIREWALL_DEBUG
              value: "off"
            - name: UPDATER_PERIOD
              value: 24h
            - name: TZ
              value: Etc/UTC
            - name: HTTP_CONTROL_SERVER_LOG
              value: "on"
          image: qmcgaw/gluetun:latest
          imagePullPolicy: IfNotPresent
          name: gluetun
          ports:
            - containerPort: 8686
              name: http
              protocol: TCP
            - containerPort: 8888
              name: http-proxy
              protocol: TCP
            - containerPort: 1080
              name: socks-proxy
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - MKNOD
            privileged: false
          volumeMounts:
            - mountPath: /gluetun
              name: gluetun
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: HTTP_PROXY
              value: http://127.0.0.1:8888
            - name: HTTPS_PROXY
              value: http://127.0.0.1:8888
            - name: NO_PROXY
              value: localhost,127.0.0.1
          image: linuxserver/lidarr:latest
          imagePullPolicy: IfNotPresent
          name: lidarr
          ports:
            - containerPort: 8686
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /music
              name: music
      serviceAccountName: default
      shareProcessNamespace: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-lidarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: lidarr-lidarr-downloads
        - name: music
          persistentVolumeClaim:
            claimName: lidarr-lidarr-music
        - name: gluetun
          persistentVolumeClaim:
            claimName: lidarr-lidarr-gluetun
