manifests/dev/lidarr/Service-lidarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
spec:
  ports:
    - name: http
      port: 8686
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/name: lidarr
  type: ClusterIP
