manifests/dev/lidarr/Ingress-lidarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: lidarr
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: lidarr
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - lidarr.home.kronkltd.net
